# Projeto_Crawler_Juridico

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
agents/: main.py
notebooks/: AgglomerativeClusteringTest.ipynb  TavilyAsyncSearch.ipynb  TesteCrawl4AI.ipynb  TesteFeedParser.ipynb  TesteOllama.ipynb
notebooks/tmp/: batch_products_extracted.json  codigo_corrigido_ollama.py  images.json  kb_result.json  links.json  predictus_knowledge_base.md  teste.txt  workflow_products.json  workflow_prompt_template.md
output/: pautas_predictus_2025-12-14_19-54-48.json
src/config/: __init__.py  predictus_products.json  queries_tavily.py  settings.py
src/core/: clustering.py  discovery.py  extractor.py  prompts.py
src/graph/: state.py  workflow.py
src/graph/nodes/: __init__.py  editorial_node.py  filter_node.py  ingestion_node.py  process_info_node.py  save_node.py
src/utils/: __init__.py  decorators.py  knowledge_base.py  knowledge_base.txt  kownledge_base.py  logger.py  prompts.py  queries_tavily.py  texts.py
testes/: AgglomerativeClusteringTest.ipynb
tests/: test_state.py
tests/core/: test_clustering.py  test_discovery.py
