[project]
name = "projeto-crawler-juridico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "crawl4ai>=0.7.7",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "langchain-core>=1.1.2",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "pytrends>=4.9.2",
    "requests>=2.32.5",
    "tavily-python>=0.7.14",
]
