[project]
name = "projeto-crawler-juridico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "crawl4ai>=0.7.7",
    "feedparser>=6.0.12",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.2",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "supabase>=2.25.1",
    "tavily-python>=0.7.14",
]


[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
